# https://setuptools.readthedocs.io/en/latest/userguide/declarative_config.html

[metadata]
name = jekyll-relative-url
description = Check that all URLs in Jekyll are relative to site.baseurl
author = Kilian Lieret
author_email = kilian.lieret@posteo.de
maintainer = Kilian Lieret
maintainer_email = kilian.lieret@posteo.de
url = https://github.com/klieret/jekyll-relative-url
version = file: jekyll_relative_url_check/version.txt
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
license_file = LICENSE.txt
python_requires = >=3.6
project_urls =
    Bug Tracker =   https://github.com/klieret/jekyll-relative-url/issues
    Source Code =   https://github.com/klieret/jekyll-relative-url/
keywords =
    jekyll
    pre-commit
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
include_package_data = True
zip_safe = False
scripts =
    jekyll_relative_url_check/bin/html_pre_commit
    jekyll_relative_url_check/bin/markdown_pre_commit
