# https://setuptools.readthedocs.io/en/latest/userguide/declarative_config.html

[metadata]
name = jekyll-relative-url-check
description = Check that all URLs in Jekyll are relative to site.baseurl
author = Kilian Lieret
author_email = kilian.lieret@posteo.de
maintainer = Kilian Lieret
maintainer_email = kilian.lieret@posteo.de
url = https://github.com/klieret/jekyll-relative-url-check
version = 2.0.2
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
license_file = LICENSE.txt
python_requires = >=3.8
project_urls =
    Bug Tracker =   https://github.com/klieret/jekyll-relative-url-check/issues
    Source Code =   https://github.com/klieret/jekyll-relative-url-check/
keywords =
    jekyll
    pre-commit
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
include_package_data = True
zip_safe = False
package_dir=
    =src
packages=find:

[options.packages.find]
where=src

[options.entry_points]
console_scripts =
    jekyll-relative-url-check-html = jekyll_relative_url_check.cli:html_pre_commit
    jekyll-relative-url-check-markdown = jekyll_relative_url_check.cli:markdown_pre_commit
